--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,14 +10,25 @@
 <body>
 	<div class="container">
 		<div class="text-center mt-4">
-			<div class="d-flex gap-3 align-items-start">
-				<form class="d-flex w-25 mb-4" role="search">
-					<input class="form-control me-2" type="search" placeholder="Search" th:value="*{searchValue}"
-						name="searchValue">
-					<button class="btn btn-outline-success" type="submit">Search</button>
-				</form>
-				<a href="/create" class="btn btn-primary">Crea pizza</a>
-				<a href="/ingredienti" class="btn btn-secondary">I nostri ingredienti</a>
+			<div class="row">
+				<div class="col-10 d-flex align-items-start gap-3">
+					<form class="d-flex w-25 mb-4" role="search">
+						<input class="form-control me-2" type="search" placeholder="Search" th:value="*{searchValue}"
+							name="searchValue">
+						<button class="btn btn-outline-success" type="submit">Search</button>
+					</form>
+					<div sec:authorize="hasAnyAuthority('ADMIN','GOD')">
+						<a href="/create" class="btn btn-primary">Crea pizza</a>
+					</div>
+					<a href="/ingredienti" class="btn btn-secondary">I nostri ingredienti</a>
+				</div>
+				<div class="col-2 d-flex flex-column align-items-center" th:if="${username} != null">
+					Utente: [[${username}]]
+					<a class="btn btn-danger btn-sm mt-2" href="/logout">Logout</a>
+				</div>
+				<div class="col-2" th:if="${username} == null">
+					<a class="btn btn-primary" href="/login">Login</a>
+				</div>
 			</div>
 			<h1 th:if="${pizze == null}">Non ci sono pizze</h1>
 			<table th:if="${pizze != null}" class="table table-striped">
@@ -40,7 +51,8 @@
 						</td>
 						<td>[[${pizza.prezzo}]] €</td>
 						<td><a th:href="@{pizza/{pizzaId}(pizzaId=${pizza.id})}" class="btn btn-primary">Info</a>
-							<a th:href="@{pizza/edit/{pizzaId}(pizzaId=${pizza.id})}"
+							<a sec:authorize="hasAnyAuthority('ADMIN', 'GOD')"
+								th:href="@{pizza/edit/{pizzaId}(pizzaId=${pizza.id})}"
 								class="btn btn-warning ms-1">Edit</a>
 						</td>
 					</tr>
