--- a/src/main/resources/templates/pizzaDetail.html
+++ b/src/main/resources/templates/pizzaDetail.html
@@ -28,12 +28,16 @@
 							</li>
 						</ul>
 					</div>
+					<div class="d-flex gap-2">
+					<div sec:authorize="hasAnyAuthority('ADMIN', 'GOD')">
 					<a class="btn btn-primary btn-sm" th:href="@{/pizza/{id}/offerta/create (id=*{pizza.id})}">Aggiungi
 						Offerta</a>
 					<form class="d-inline-block" th:action="@{/pizza/delete/{id} (id=*{pizza.id})}" method="POST">
 						<button class="btn btn-danger btn-sm" type="submit">Elimina</button>
 					</form>
+					</div>
 					<a th:replace="returnButton :: button('/', 'Return')"></a>
+					</div>
 				</div>
 			</div>
 		</div>
