--- a/src/main/resources/templates/pizzaDetail.html
+++ b/src/main/resources/templates/pizzaDetail.html
@@ -29,7 +29,7 @@
 						</ul>
 					</div>
 					<div class="d-flex gap-2">
-					<div sec:authorize="hasAnyAuthority('ADMIN', 'GOD')">
+					<div sec:authorize="hasAnyAuthority('ADMIN')">
 					<a class="btn btn-primary btn-sm" th:href="@{/pizza/{id}/offerta/create (id=*{pizza.id})}">Aggiungi
 						Offerta</a>
 					<form class="d-inline-block" th:action="@{/pizza/delete/{id} (id=*{pizza.id})}" method="POST">
